fix: focus color for task not showing for build

--- a/src/app/features/tasks/task/task.component.scss
+++ b/src/app/features/tasks/task/task.component.scss
@@ -104,7 +104,9 @@ $z-time-btn-svg-wrapper: 5555;
     border-radius: $card-border-radius;
 
     @include mq(xs) {
-      border: 1px solid $c-accent !important;
+      border: 1px solid $c-accent;
+      // NOTE: somehow ng build messes up, if we don't include it like that
+      border-color: $c-accent;
       box-shadow: $whiteframe-shadow-5dp;
       left: -3px;
       right: -3px;
